# src/group/request.go
@@ -1,0 +1,8 @@
+package group
+
+// AddRequest request to add
+type AddRequest struct {
+	Name string
+
+	Users []string
+}
